Updated Social links.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="s-intro__content-bottom">
 
                     <div class="s-intro__content-bottom-block">
-                        <h5>Launching in</h5>
+                        <h5>Going Live on September 01, 2023</h5>
             
                         <div class="counter">
                             <div class="counter__time">
@@ -96,14 +96,14 @@
 
                     <div class="s-intro__content-bottom-block">
 
-                        <h5>Follow Us</h5>
+                        <!-- <h5>Follow Us</h5> -->
 
                         <ul class="social">
-                            <li><a href="">FB</a></li>
-                            <li><a href="">TW</a></li>
-                            <li><a href="">IG</a></li>
-                            <li><a href="">DB</a></li>
-                            <li><a href="">BH</a></li>
+                            <!-- <li><a href="">FB</a></li> -->
+                            <!-- <li><a href="">TW</a></li> -->
+                            <li><a href="https://www.instagram.com/matterhornartstudios/">Instagram</a></li>
+                            <!-- <li><a href="">DB</a></li> -->
+                            <!-- <li><a href="">BH</a></li> -->
                         </ul>
 
                     </div> <!-- end s-intro-content__bottom-block -->
