--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
                         <div class="counter">
                             <div class="counter__time">
-                                <span class="ss-days">000</span>
+                                <span class="ss-days">00</span>
                                 <span>D</span>
                             </div>
                             <div class="counter__time">
@@ -96,7 +96,7 @@
 
                     <div class="s-intro__content-bottom-block">
 
-                        <!-- <h5>Follow Us</h5> -->
+                        <h5>Follow Us</h5>
 
                         <ul class="social">
                             <!-- <li><a href="">FB</a></li> -->
