--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="s-intro__header"> 
             <div class="s-intro__logo">
                 <a class="logo" href="index-static.html">
-                    <img src="images/logo.svg" alt="Homepage">
+                    <img src="images/Matterhorn-Art-Studios-logo.svg" alt="Matterhorn Art Studios - Fine Art Originals and Reproductions.">
                 </a>
             </div>
         </header>  <!-- s-intro__header -->
