--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- MailChimp
+    ================================================== -->
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/500420ce91c4a797d2e1fa280/08626e02cf1ec62f23ffee997.js");</script>
+
     <!-- favicons
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -101,7 +105,7 @@
                         <ul class="social">
                             <!-- <li><a href="">FB</a></li> -->
                             <!-- <li><a href="">TW</a></li> -->
-                            <li><a href="https://www.instagram.com/matterhornartstudios/">Instagram</a></li>
+                            <li><a href="https://www.instagram.com/matterhornartstudios/" target="_blank">Instagram</a></li>
                             <!-- <li><a href="">DB</a></li> -->
                             <!-- <li><a href="">BH</a></li> -->
                         </ul>
@@ -374,7 +378,7 @@
                                         <ul class="link-list">
                                             <!-- <li><a href="#0">Facebook</a></li>
                                             <li><a href="#0">Twitter</a></li> -->
-                                            <li><a href="https://www.instagram.com/matterhornartstudios/">Instagram</a></li>
+                                            <li><a href="https://www.instagram.com/matterhornartstudios/" target="_blank">Instagram</a></li>
                                         </ul>
                 
                                     </div>
