Finished horizontal logo. Added Matterhorn
Blurred, transparent background image.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
 
         <header class="s-intro__header"> 
             <div class="s-intro__logo">
+                <img class="logo" src="images/Matterhorn-Art-Studios-logo.svg" alt="Matterhorn Art Studios - Fine Art Originals and Reproductions.">
+            </div>
+        </header>  <!-- s-intro__header -->
+
+        <!-- <header class="s-intro__header"> 
+            <div class="s-intro__logo">
                 <a class="logo" href="index-static.html">
                     <img src="images/Matterhorn-Art-Studios-logo.svg" alt="Matterhorn Art Studios - Fine Art Originals and Reproductions.">
                 </a>
             </div>
-        </header>  <!-- s-intro__header -->
+        </header> -->
 
         <div class="row s-intro__content">
             <div class="column">
@@ -126,7 +132,7 @@
 
                 <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="30" height="30"><path d="M.5 4.5l7 4 7-4m-13-3h12a1 1 0 011 1v10a1 1 0 01-1 1h-12a1 1 0 01-1-1v-10a1 1 0 011-1z" stroke="var(--color-2-dark)"></path></svg>
                 
-                <h4>Drop us a mail</h4>
+                <h4>Drop us an Email</h4>
 
                 <p class="ss-modal__text">
                 Just send us a simple email and we'll notify you when the project is out of Beta.
