Tweaks to css and img - Lighthouse

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Knox - Static</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Matterhorn Art Studios &mdash; Fine Art Originals and Collectable Prints</title>
+    <meta name="author" content="&copy;2023 Matterhorn Art Studios &mdash; Zermatt, Switzerland">
+    <meta name="description" content="Put your description here.">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -132,14 +132,14 @@
 
                 <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="30" height="30"><path d="M.5 4.5l7 4 7-4m-13-3h12a1 1 0 011 1v10a1 1 0 01-1 1h-12a1 1 0 01-1-1v-10a1 1 0 011-1z" stroke="var(--color-2-dark)"></path></svg>
                 
-                <h4>Drop us an Email</h4>
+                <h5>Drop us an Email</h5>
 
                 <p class="ss-modal__text">
                 Just send us a simple email and we'll notify you when the project is out of Beta.
                 </p>
 
                 <form id="mc-form" class="mc-form" enctype="multipart/form-data" method="POST" action="mailto:info@matterhornart.com?subject=Let%20me%20know%20when%20Matterhorn%20Art%20Studios%20project%20goes%20live!&body=Just%20send%20us%20an%20email%20and%20we&#8217;ll%20let%20you%20know%20when%20we&#8217;re%20up%20and%20running%20(we%20don&#8217;t%20share%20your%20email%20and%20no%20spam).">
-                    <input type="submit" name="sendMail" value="sendMail" class="btn--small btn--primary u-fullwidth">
+                    <input type="submit" name="sendMail" value="S E N D" class="btn--small btn--primary u-fullwidth">
                     <div class="mc-status"></div>
                 </form>
 
