--- a/index.html
+++ b/index.html
@@ -53,25 +53,18 @@
             </div>
         </header>  <!-- s-intro__header -->
 
-        <!-- <header class="s-intro__header"> 
-            <div class="s-intro__logo">
-                <a class="logo" href="index-static.html">
-                    <img src="images/Matterhorn-Art-Studios-logo.svg" alt="Matterhorn Art Studios - Fine Art Originals and Reproductions.">
-                </a>
-            </div>
-        </header> -->
 
         <div class="row s-intro__content">
             <div class="column">
 
                 <div class="text-pretitle">
-                    Nice to meet you.
+                    Introducing the Matterhorn Art Studios Project
                 </div>
 
                 <h1 class="text-huge-title">
-                We are preparing <br>
-                something exciting <br>
-                & amazing for you.
+                Something is in the <br>
+                works for lovers of<br>
+                nature & the mountains.
                 </h1>
 
                 <div class="s-intro__content-bottom">
