--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
             <div class="column">
 
                 <h1 class="text-huge-title text-center">
-                    Hi, We Are Knox.
+                    Matterhorn Art Studios.
                 </h1>
 
                 <nav class="tab-nav">
                     <ul class="tab-nav__list"> 
                         <li class="active" data-id="tab-about">
                             <a href="#0">
-                                <span>About</span>
+                                <span>Prints</span>
                             </a>
                         </li>
                         <li>
                             <a href="#tab-services">
-                                <span>Services</span>
+                                <span>About</span>
                             </a>
                         </li>
                         <li>
@@ -194,32 +194,28 @@
 
                         <div class="row tab-content__item-header">
                             <div class="column">
-                                <h2>Our Story.</h2>
+                                <h2>Matterhorn North Face Sunset</h2>
+                                <h3>Pencil on paper, black &amp; white sketch 70x53 cm </h3>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="column">
                                 <p class="lead">
-                                Quidem molestiae natus ipsa ut nihil molestiae numquam tenetur. Ipsum quia 
-                                sit vitae ipsam et temporibus est. Consequatur recusandae aut aut. Aut esse 
-                                sed sint. Sit ipsa velit possimus est. Atque doloribus dicta sit beatae 
-                                necessitatibus. Aut voluptate asperiores nostrum eveniet magnam et consequatur 
-                                ab accusamus magni.
+                                    Available as a Limited Edition of 500. Artist signed, hand-made Serigraph prints on 
+                                    museum-quality hand-made Zerkall bütton paper. 
                                 </p>
 
                                 <p>
-                                Tempora debitis perspiciatis eum. Repudiandae et aperiam quos exercitationem 
-                                enim voluptatem quam sequi temporibus. Ratione quis nihil voluptatem placeat 
-                                nemo. Quibusdam delectus magni quas et architecto et repellat a nam.
-                                Quasi et voluptates libero sed vel quos in nisi. Error et quis. Impedit autem 
-                                porro facilis. Aut voluptate asperiores nostrum eveniet magnam et consequatur 
-                                ab accusamus.
+                                    The classic Zermatt view of the sun setting on the Matterhorn's north face, 
+                                    as seen in the spring, when there is often a combination of summer sun and winter snow. 
+                                    This brings out the features of the Horn's north face in the late evening and is 
+                                    one of most stunning times of the year to look up at this amazing pyramid of rock. 
                                 </p>
 
                                 <div class="row">
                                     <div class="column lg-6 tab-12">
-                                        <h4>More About Us.</h4>
+                                        <h4>Serigraph Prints.</h4>
                                         <p>
                                         Sed consequatur quia delectus praesentium. Ut unde velit maiores aut sint 
                                         quia molestiae accusamus. Nihil et quidem qui natus ut et. Autem error 
@@ -229,13 +225,23 @@
                                         </p>
                                     </div>
                                     <div class="column lg-6 tab-12">
-                                        <h4>Need Web Hosting?</h4>
+                                        <h4>Purchase Online Now.</h4>
                                         <p>
-                                        Need a great reliable web hosting?
-                                        We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                                        Powerful web and Wordpress hosting. Guaranteed. Starting at $2.95 per month.
+                                        Purchase directly online. Each hand-signed and numbered Serigraph print sells for 160.- CHF
                                         </p>
-                                        <a href="https://www.dreamhost.com/r.cgi?287326" class="btn btn--stroke u-fullwidth">Get Started Now</a>
+                                        
+
+                                        <script async
+                                            src="https://js.stripe.com/v3/buy-button.js">
+                                        </script>
+                                        
+                                        <stripe-buy-button
+                                            buy-button-id="buy_btn_1NYD8oJt9XuhuuxuznZS94eH"
+                                            publishable-key="pk_live_51NUZsWJt9XuhuuxukzUnN214aTo06xJwFrL2jwobuGNeLE5sRDH6I73Pv9U2q3kaKHwaOqUAWdnAuxmDOjEdDHH500HbtiBc2d"
+                                        >
+                                        </stripe-buy-button>
+
+
                                     </div>
                                 </div>
                             </div>
