--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                         <div class="row">
                             <div class="column">
                                 <p class="lead">
-                                    Available as a Limited Edition of 500. Artist signed, hand-made Serigraph prints on 
-                                    museum-quality hand-made Zerkall bütton paper. 
+                                    Available as a Limited Edition of 500. Artist signed, hand printed Serigraphs on 
+                                    museum quality handmade Zerkall bütton paper. 
                                 </p>
-
+                                <img class="logo" src="images/matterhorn-basic-grey-frame.webp" alt="Matterhorn Art Studios - Matterhorn North Face Sunset">
                                 <p>
                                     The classic Zermatt view of the sun setting on the Matterhorn's north face, 
                                     as seen in the spring, when there is often a combination of summer sun and winter snow. 
@@ -217,17 +217,25 @@
                                     <div class="column lg-6 tab-12">
                                         <h4>Serigraph Prints.</h4>
                                         <p>
-                                        Sed consequatur quia delectus praesentium. Ut unde velit maiores aut sint 
-                                        quia molestiae accusamus. Nihil et quidem qui natus ut et. Autem error 
-                                        architecto. Pariatur ex repellendus. Occaecati voluptatibus dolorem magni 
-                                        molestiae dolore voluptas occaecati asperiores nemo. Est fugiat fuga nesciunt 
-                                        ducimus quaerat et placeat natus.
+                                            This is a Serigraph print of the original artwork.
+                                            Great efforts to source paper of a quality suitable for this process. 
+                                            A German "bütton" (Mould-made) paper from the traditions-rich Zerkall paper mill has been
+                                            selected to meet the highest possible standards.
+                                        </p>
+                                        <img class="logo" src="images/detail-of-matterhorn.webp" alt="Matterhorn Art Studios - Matterhorn North Face Sunset summit detail">
+                                        
+                                        <p>
+                                            The Matterhorn Sunset on the North Wall Edition is printed on a 270g Zerkall Litho VI Bütton paper. 
+                                            This "mould-made" paper is one of the best options for creating this type of Serigraph. 
+                                            It is 75% pure cotton, acid free, and does not use optical brighteners. It is museum grade &mdash;
+                                            which means that is non-ageing and does not yellow over time (meeting the ISO 9706 standard). 
                                         </p>
                                     </div>
                                     <div class="column lg-6 tab-12">
-                                        <h4>Purchase Online Now.</h4>
+                                        <h4>Available for Online Purchase.</h4>
                                         <p>
                                         Purchase directly online. Each hand-signed and numbered Serigraph print sells for 160.- CHF
+                                        (plus shipping costs)
                                         </p>
                                         
 
@@ -254,7 +262,7 @@
 
                         <div class="row tab-content__item-header">
                             <div class="column">
-                                <h2>What We Do.</h2>
+                                <h2>What Is the Matterhorn Art Studios Project?</h2>
                             </div>
                         </div>
 
