--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                     <h4 class="item-title">The Concept</h4>
                                     <p>
                                         Our goal is to bring together a handful of talented artists/photographers and offer 
-                                        stunning and unique outdoor artwork to collect and display in your home or business. 
+                                        stunning and unique outdoor focused artwork to collect and display in your home or business. 
                                     </p>
                                     <p>
                                         We are working on our release website with an easy to use online store (this is our 
