Trying to keep logo from dissapearing on small phone screens

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         <header class="s-intro__header"> 
             <div class="s-intro__logo">
                 <a href="#hidden" class="smoothscroll">
-                    <img class="logo" src="images/Matterhorn-Art-Studios-logo.svg" alt="Matterhorn Art Studios - Fine Art Originals and Reproductions.">
+                    <img 
+                        class="logo" 
+                        src="images/Matterhorn-Art-Studios-logo.svg" 
+                        alt="Matterhorn Art Studios - Fine Art Originals and Reproductions."
+                    />
                 </a>
             </div>
             
