Added BETA icon.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
         <div class="row s-intro__content">
             <div class="column">
 
-
+                <img 
+                    src="images/BETA.svg" 
+                    alt="Matterhorn Art Studios - Now in BETA"
+                    style="width:5em; transform: rotate(-20deg); position: relative; top:1.3em; left:-0.5em;"
+                />
 
                 <div class="text-pretitle">
                     Introducing the Matterhorn Art Studios Project - Now in Beta!
@@ -300,7 +304,7 @@
                                 </div>
 
                                 <p style="margin-top:2em;">
-                                    Any questions? Please <a href="http://127.0.0.1:5500/index.html#tab-contact">contact us</a>.
+                                    Any questions? Please <a href="#tab-contact">contact us</a>.
                                 </p>
 
 
